crates/swc_ecma_parser/tests/test262-error-references/fail/556900b449f81433.js.stderr
error: Unexpected line break between arrow head and arrow
 --> $DIR/tests/test262-parser/fail/556900b449f81433.js:1:1
  |
1 | (a,...a)/* */ => 0
  | ^^^^^^^^

